<resources>
  <string name="app_name">Call Recorder</string>
  <string name="recording_enabled_prompt">Record during calls</string>
  <string name="audio_source_prompt">Audio source</string>
  <string name="audio_format_prompt">Audio format</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable call record</string>
  <string name="pref_description_social_recommendations">Enable the app to record calls</string>


  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>


  <string-array name="multi_select_list_preference_default_value"/>

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
  <string name="action_settings">Settings</string>
  <string name="enable_call_records">Enable Call Records</string>
  <string name="record_incoming_call">Record Incoming Call</string>
  <string name="record_outgoing_call">Record Outgoing Call</string>
  <string name="call_record_settings">Call Record Settings</string>
  <string name="audio_source">Audio Source</string>
  <string name="output">Output</string>
  <string name="change">Change</string>
  <string name="select_directory">Select Directory</string>
  <string name="not_found">Not found</string>
  <string name="save_settings">Output Settings</string>
  <string name="number_records">Number of records to keep</string>
</resources>
