<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:padding="@dimen/appbar_padding_top"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_record_settings"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/appbar_padding_top"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/appbar_padding_top"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          >
        <Switch
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:id="@+id/callrecord_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_call_records"
            android:enabled="true"
            android:checked="true"
            />
        <Switch
            android:id="@+id/in_callrecord_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/record_incoming_call"
            android:enabled="true"
            android:checked="true"
            />
        <Switch
            android:id="@+id/out_callrecord_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/appbar_padding_top"
            android:enabled="true"
            android:checked="true"
            android:text="@string/record_outgoing_call"
            />
      </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_marginTop="@dimen/small_padding"
        android:padding="@dimen/appbar_padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/appbar_padding_top"
        android:layout_marginTop="@dimen/small_padding"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/appbar_padding_top"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          >

        <LinearLayout
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

          <LinearLayout
              android:layout_marginTop="@dimen/appbar_padding_top"
              android:layout_marginBottom="@dimen/appbar_padding_top"
              android:layout_weight="1"
              android:layout_width="0dp"

              android:layout_height="wrap_content"
              android:orientation="vertical"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Destination Folder"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destinationPath"
                android:text="/sdcard/aCallRecorder"
                android:maxLines="2"
                />
          </LinearLayout>

          <Button
              android:id="@+id/selectDestinationFolder"
              android:layout_width="wrap_content"
              android:text="@string/change"
              android:layout_height="wrap_content"
              style="@style/Widget.AppCompat.Button.Colored"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/audio_source"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              />
          <Spinner
              android:id="@+id/sourceSpinner"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawSelectorOnTop="true"
              android:entries="@array/output_array"
              />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/output"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              />
          <Spinner
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/appbar_padding_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/number_records"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              />
          <Spinner
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/recordsNumber"
              android:drawSelectorOnTop="true"
              android:entries="@array/records_array"
              />
        </LinearLayout>

      </LinearLayout>
    </android.support.v7.widget.CardView>

  </LinearLayout>
</ScrollView>